--- a/Site TechConnect/index.html
+++ b/Site TechConnect/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <header>
+        <nav>
+            <span class="nav-span"><a href="">Inicio</a></span>
+            <span class="nav-span"><a href="#biografias">Biografias</a></span>
+            <span class="nav-span"><a href="#formulario">Formulário</a></span>
+        </nav>
         <button><img src="img/menu_icon.svg" alt="Menu"></button>
         <span>TechFuture Summit</span>
     </header>
@@ -20,7 +25,7 @@
             <span><strong>Local:</strong> São Paulo Expo, São Paulo - SP</span>
             <a href="#formulario">Participe Já!</a>
         </section>
-        <section class="biografia">
+        <section id="biografias" class="biografia">
             
             <img src="img/user_icon.svg" alt="">
             <h2>Ana Clara Martins​</h2>
